# binance-ema

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
binancema/: __init__.py  coininfo.py  indicators.py
examples/: example_coininfo.py  get_coin_price.py  get_symbol_quantity.py
src/binancema/: coininfo.py  indicators.py
tests/: example_coininfo.py
